<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titre_stat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:text="@string/menu_stat"/>

    <LinearLayout
        android:id="@+id/pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/titre_stat">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/pseudo"/>

        <Spinner
            android:id="@+id/spinnerPseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/LayoutScoreStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:layout_below="@id/radioGroupStat">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameGame1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/statReactTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameGame2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/statFormClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameGame3"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/statFastClicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pseudo"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highScore"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonMoyen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreMoy"/>

    </RadioGroup>



</RelativeLayout>
