<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ReactionTime_Layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".game1_reacttime.ReactTime" >

    <RelativeLayout
        android:id="@+id/Button_Layout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:text="@string/btnInit"
            android:textColor="@android:color/white"
            android:background="@color/RTBleu"
            android:textSize="24sp" />
    </RelativeLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/infoInit"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/avgText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/RTGris"
            android:text="@string/moyenneTexte"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias="0.02" />

        <TextView android:id="@+id/avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/moyenneValeur"
            app:layout_constraintTop_toTopOf="@id/avgText"
            app:layout_constraintLeft_toRightOf="@id/avgText"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/triesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/RTGris"
            android:text="@string/essaisTexte"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/tries"
            app:layout_constraintRight_toLeftOf="@id/tries" />

        <TextView
            android:id="@+id/tries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/essaisValeur"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias="0.98" />

    </android.support.constraint.ConstraintLayout>


</FrameLayout>