<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".game1_reacttime.ScorePopUp" >


    <TextView
        android:id="@+id/bilanTextPopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:text="@string/bilan"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/LayoutMoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bilanTextPopUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp">

        <TextView
            android:id="@+id/avgText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:text="@string/moyenneTexte"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/avgScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/moyenneValeur"
            android:textSize="30sp" />

    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnContinuer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LayoutMoy"
        android:layout_centerHorizontal="true"
        android:text="@string/continuer"
        app:backgroundTint="@color/RTBleu"
        android:textAllCaps="false"
        android:textSize="25sp" />


</RelativeLayout>