<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".game3_FastClick.ScorePopUpFastClicker" >


    <TextView
        android:id="@+id/bilanTextGame2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/bilan"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/LayoutScoreFastClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bilanTextGame2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/scoreFCText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/scoreFCVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnContinuer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LayoutScoreFastClick"
        android:layout_centerHorizontal="true"
        android:text="@string/continuer"
        android:textAllCaps="false"
        android:textColor="@color/RTBlanc"
        android:textSize="25sp"
        app:backgroundTint="@color/RTBleu" />


</RelativeLayout>