<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".game2_noname.ScorePopUpGame2" >


    <TextView
        android:id="@+id/bilanTextGame2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/bilan"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/LayoutScore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bilanTextGame2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/score1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textScoreNGame2"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/score1Val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutScore2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LayoutScore1"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/score2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textScoreNGame2"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/score2Val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutScore3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LayoutScore2"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/score3Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textScoreNGame2"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/score3Val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutTemps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LayoutScore3"
        android:layout_marginBottom="40dp">

        <TextView
            android:id="@+id/tempsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTempsGame2"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tempsVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnContinuer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LayoutTemps"
        android:layout_centerHorizontal="true"
        android:text="@string/continuer"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:backgroundTint="@color/RTBleu" />


</RelativeLayout>